Add region and round data to the show bracket page. Now ready to start styling that shit. Yeah.

--- a/app/views/brackets/new.html.erb
+++ b/app/views/brackets/new.html.erb
@@ -24,7 +24,7 @@
                     <div class="teamName" data-bind="text: name"></div>
                 </a>
                 <!-- /ko -->
-                <div class="btn btn-primary btn-large winner" data-bind="if: typeof winner() !== 'undefined'">
+                <div class="btn btn-primary btn-large team winner" data-bind="if: typeof winner() !== 'undefined'">
                     <img class="teamLogo" data-bind="attr: {src: winner().image}"/>
                     <div class="teamName" data-bind="text: winner().name"></div>
                 </div>
@@ -41,7 +41,7 @@
                     <div class="teamName" data-bind="text: name"></div>
                 </a>
                 <!-- /ko -->
-                <div class="btn btn-primary btn-large winner" data-bind="if: typeof winner() !== 'undefined'">
+                <div class="btn btn-primary btn-large team winner" data-bind="if: typeof winner() !== 'undefined'">
                     <img class="teamLogo" data-bind="attr: {src: winner().image}"/>
                     <div class="teamName" data-bind="text: winner().name"></div>
                 </div>
@@ -58,7 +58,7 @@
                     <div class="teamName" data-bind="text: name"></div>
                 </a>
                 <!-- /ko -->
-                <div class="btn btn-primary btn-large winner" data-bind="if: typeof winner() !== 'undefined'">
+                <div class="btn btn-primary btn-large team winner" data-bind="if: typeof winner() !== 'undefined'">
                     <img class="teamLogo" data-bind="attr: {src: winner().image}"/>
                     <div class="teamName" data-bind="text: winner().name"></div>
                 </div>
@@ -75,7 +75,7 @@
                     <div class="teamName" data-bind="text: name"></div>
                 </a>
                 <!-- /ko -->
-                <div class="btn btn-primary btn-large winner" data-bind="if: typeof winner() !== 'undefined'">
+                <div class="btn btn-primary btn-large team winner" data-bind="if: typeof winner() !== 'undefined'">
                     <img class="teamLogo" data-bind="attr: {src: winner().image}"/>
                     <div class="teamName" data-bind="text: winner().name"></div>
                 </div>
@@ -92,7 +92,7 @@
                     <div class="teamName" data-bind="text: name"></div>
                 </a>
                 <!-- /ko -->
-                <div class="btn btn-primary btn-large winner" data-bind="if: typeof winner() !== 'undefined'">
+                <div class="btn btn-primary btn-large team winner" data-bind="if: typeof winner() !== 'undefined'">
                     <img class="teamLogo" data-bind="attr: {src: winner().image}"/>
                     <div class="teamName" data-bind="text: winner().name"></div>
                 </div>
