Add TODO note in brackets stylesheets

--- a/app/assets/stylesheets/brackets.css.scss
+++ b/app/assets/stylesheets/brackets.css.scss
@@ -1,3 +1,8 @@
+// TODO:
+//  - make use of variables and clever math to make this more dynamic
+//  - add styles for final four and championship
+//  - make everything prettier (or at least less plain)
+
 .bracket {
 	background-color: #fff;
 	width: 1200px;
