--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
   <footer>
     <ul  class="unstyled credit center">
       <li rel="tooltip" title="Any feedback is welcome. Reach out to me on twitter (@cameronmaske) or drop me an email cam[at]closedlooplabs.co.uk" data-placement="top"> 
-        Designed by <a href="http://twitter.com/cameronmaske"> Cameron Maske </a> from <a href="http://www.closedlooplabs.co.uk/"> Closed Loop Labs </a>
+        Built by <a href="http://incube.us"> InCube </a> from <a href="http://entrepreneurship.duke.edu/campus-resources"> Duke University </a>
       </li>
     </ul>
     <ul class="unstyled links center">
