--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,6 +19,9 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
+                  <%= link_to "My Account", '/account' %>
+                </li>
+                <li>
                   <%= link_to "My Brackets", brackets_path %>
                 </li>
                 <li>
