--- a/app/views/payments/create.html.erb
+++ b/app/views/payments/create.html.erb
@@ -1,1 +1,11 @@
-<h2>Thanks, you paid <strong>$2.00</strong>!</h2>
+<div id="load">
+	<section class="center" id="mission">
+		<div class="container">
+			<div class="row">
+				<div class="span5 offset4">
+					<h2>Thanks, you paid <strong>$2.00</strong>!</h2>
+				</div>
+			</div>
+		</div>
+	</section>
+</div>
