added donations to payments

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+    <script src="https://checkout.stripe.com/v2/checkout.js"></script>
   <%= csrf_meta_tags %>
 </head>
 
