--- a/app/views/payments/create.html.erb
+++ b/app/views/payments/create.html.erb
@@ -3,7 +3,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="span5 offset4">
-					<h2>Thanks, you paid <strong>$2.00</strong>!</h2>
+					<h2>Thanks, you paid <strong>$<%= (@amt.to_i / 100) %>.00</strong>!</h2>
 				</div>
 			</div>
 		</div>
