More work on naming brackets

--- a/app/views/brackets/show.html.erb
+++ b/app/views/brackets/show.html.erb
@@ -1,5 +1,5 @@
 <h1>NOTE: This should be formatted prettily at some point. (Alex can do this)</h1>
-<h3>But for now all the data you need is here</h3>
+<h3>But for now all the data you need is heres</h3>
 
 <br/>
 <br/>
