--- a/app/views/account/myaccount.html.erb
+++ b/app/views/account/myaccount.html.erb
@@ -18,7 +18,7 @@
 				<div class="span10 offset1">
 					<div class="hero ">
 						<h2><a href="/brackets/new">Make a new Bracket</></h2>
-						<h2><a href="/bracket">Brackets</></h2>
+						<h2><a href="/brackets">Brackets</></h2>
 					</div>
 				</div>
 				<div class="span8 offset2">
