--- a/app/views/brackets/new.html.erb
+++ b/app/views/brackets/new.html.erb
@@ -2,6 +2,10 @@
     <section class="center" id="mission">
         <div class="container">
             <div class="row">
+                <div id="bracket_naming" class="span8 offset2">
+                        <h1 id="bracket_instr">Name your bracket:</h1>
+                        <input id="bracket_name" value="" />
+                </div>
                 <div class="span8 offset2">
                         <h1 id="bracket_instr">Begin by making your picks for round 1:</h1>
                 </div>
