--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,39 +1,121 @@
 <div id="load">
+
 	<section class="center" id="mission">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="row">
 				<div class="span10 offset1">
-					<div class="hero ">
-						<h1>Mission In Text</h1>
+					<div class="hero">
+						<h1>Mission</h1>
+						<p>Brackets4Life applies the energy of March Madness to take steps towards finding a cure for SIDS. SIDS research needs more funding and one way to achieve this is through efforts like Brackets4Life. Current research studies can be found here: http://www.cjsids.org/resource-center/sids-research/recent-research.html</p>
+						<p>We also hope to increase awareness about what steps parents can currently take to reduce their baby’s risk of SIDS. For a summary of these steps, parents should follow this link:
+							http://www.cjsids.org/resource-center/risk-reduction-strategy.html</p>
+						</div>
 					</div>
 				</div>
-				<div class="span8 offset2">
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="dark" id="story">
-		<div class="container">
-			<div class="row">
-				<div class="span12 center">
-					<h2 class="cursive"> Story </h2>
-					Lorem Ipsum
-					<br/><br/>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="center" id="team">
-		<div class="container">
-			<div class="row">
-				<div class="span10 offset1">
-					<div class="hero ">
-						<h2>Team</h2>
+			</section>
+
+			<section class="dark" id="story">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="span12 center">
+							<div class="span6">
+								<h2 class="cursive"> Michael's Story </h2>
+								<p>On July 2, 1996, the McConville family was blessed with the arrival of their second son, Christopher James. On December 2, 1996, Christopher's five month birthday, the family’s world was shattered when they lost their precious baby to Sudden Infant Death Syndrome (SIDS).</p>
+
+								<p>Over the past 9 years the McConville family has raised over $1 million for the CJ Foundation for SIDS. These much needed funds have given us the power to find answers to our questions and contribute to a future where every child has the opportunity to live life to its fullest.</p>
+
+								<p>“As we continue to live our life without "our little sunshine", we feel a "ray of hope" as we join with the CJ Foundation in the battle against SIDS. Together, we will make a difference in the life of a child.” - Jennifer McConville</p>
+							</div>
+							<br/><br/>
+							<div class="span4 img offset1">
+							</div>
+							<br/><br/>
+						</div>
 					</div>
 				</div>
-				<div class="span8 offset2">
+				<br/><br/><br/><br/>
+				<div class="container-fluid">
+					<div class="row">
+						<div class="span12 center">
+							<div class="span6 offset6">
+								<h2 class="cursive"> Incube's Story </h2>
+								<h4>Incube is a student entrepreneurship group at Duke University.</h4>
+
+								<p>As a friend of InCube, Michael approached us asking for help in the creation of a March Madness Bracket website to raise money for the CJ Foundation for SIDS.  InCube was enthusiastic about Michael’s idea and we planned a Hack-a-Thon to completely finish his project in one night. </p>
+
+								<p>The CJ Foundation is the largest non-government funder of research about SIDS and support for the families that have been affected by a SIDS death.  Since its founding in 1994, the CJ Foundation for SIDS has raised more than 50 million dollars.</p>
+							</div>
+							<br/><br/>
+						</div>
+					</div>
 				</div>
-			</div>
+			</section>
+
+			<section class="center" id="team">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="span10 offset1">
+							<div class="hero ">
+								<h1 class="cursive">Team</h1>
+							</div>
+							<section class="main">
+
+								<ul class="ch-grid">
+									<li>
+										<div class="ch-item ch-img-1">
+											<div class="ch-info">
+												<h3>Brainiac</h3>
+												<p>by Daniel Nyari <a href="http://drbl.in/eODP">View on Dribbble</a></p>
+											</div>
+										</div>
+									</li>
+									<li>
+										<div class="ch-item ch-img-2">
+											<div class="ch-info">
+												<h3>Vision</h3>
+												<p>by Daniel Nyari <a href="http://drbl.in/eNXW">View on Dribbble</a></p>
+											</div>
+										</div>
+									</li>
+									<li>
+										<div class="ch-item ch-img-3">
+											<div class="ch-info">
+												<h3>Cylon</h3>
+												<p>by Daniel Nyari <a href="http://drbl.in/eNXY">View on Dribbble</a></p>
+											</div>
+										</div>
+									</li>
+									<li>
+										<div class="ch-item ch-img-4">
+											<div class="ch-info">
+												<h3>Alyssa Henline</h3>
+												<p><a href="http://skillgrabber.net" target="_blank">Skillgrabber</a></p>
+											</div>
+										</div>
+									</li>
+									<li>
+										<div class="ch-item ch-img-5">
+											<div class="ch-info">
+												<h3>Joshua Miller</h3>
+												<p><a href="http://skillgrabber.net" target="_blank">Skillgrabber</a></p>
+											</div>
+										</div>
+									</li>
+									<li>
+										<div class="ch-item ch-img-6">
+											<div class="ch-info">
+												<h3>Arun Karottu</h3>
+												<p>"A is A" <a href="http://bambooframe.herokuapp.com/" target="_blank">BambooFrame</a></p>
+											</div>
+										</div>
+									</li>
+								</ul>
+
+							</section>
+						</div>
+						<div class="span8 offset2">
+						</div>
+					</div>
+				</div>
+			</section>
 		</div>
-	</section>
-</div>
