row fluid for about us page

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -2,7 +2,7 @@
 
 	<section class="center" id="mission">
 		<div class="container-fluid">
-			<div class="row">
+			<div class="row-fluid">
 				<div class="span10 offset1">
 					<div class="hero">
 						<h1>Mission</h1>
@@ -16,9 +16,9 @@
 
 			<section class="dark" id="story">
 				<div class="container-fluid">
-					<div class="row">
+					<div class="row-fluid">
 						<div class="span12 center">
-							<div class="span6">
+							<div class="span5 offset1">
 								<h2 class="cursive"> Michael's Story </h2>
 								<p>On July 2, 1996, the McConville family was blessed with the arrival of their second son, Christopher James. On December 2, 1996, Christopher's five month birthday, the family’s world was shattered when they lost their precious baby to Sudden Infant Death Syndrome (SIDS).</p>
 
@@ -35,9 +35,9 @@
 				</div>
 				<br/><br/><br/><br/>
 				<div class="container-fluid">
-					<div class="row">
+					<div class="row-fluid">
 						<div class="span12 center">
-							<div class="span6 offset6">
+							<div class="span5 offset6">
 								<h2 class="cursive"> Incube's Story </h2>
 								<h4>Incube is a student entrepreneurship group at Duke University.</h4>
 
@@ -53,7 +53,7 @@
 
 			<section class="center" id="team">
 				<div class="container-fluid">
-					<div class="row">
+					<div class="row-fluid">
 						<div class="span10 offset1">
 							<div class="hero ">
 								<h1 class="cursive">Team</h1>
