--- a/app/views/account/myaccount.html.erb
+++ b/app/views/account/myaccount.html.erb
@@ -1,7 +1,7 @@
 <div id="load">
 	<section class="center" id="mission">
-		<div class="container">
-			<div class="row">
+		<div class="container-fluid">
+			<div class="row-fluid">
 				<div class="span10 offset1">
 					<div class="hero ">
 						<h1>Welcome to Brackets for Life!</h1>
@@ -13,10 +13,10 @@
 		</div>
 	</section>
 	<section class="center" id="team">
-		<div class="container">
-			<div class="row">
+		<div class="container-fluid">
+			<div class="row-fluid">
 				<div class="span10 offset1">
-					<div class="hero ">
+					<div class="hero">
 						<h2><a href="/brackets/new">Make a new Bracket</></h2>
 						<h2><a href="/brackets">Brackets</></h2>
 					</div>
