--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
                 <div class="span10 offset1">
                     <div class="hero ">
                         <div class="video" rel="tooltip" title="Embed any product demos or promotional videos without worrying about if they will fit to different screen sizes. Don't want to include a video? Easy to remove with no side effects. " data-placement="right">
-                            <iframe src="http://player.vimeo.com/video/13776542?title=0&amp;byline=0&amp;portrait=0&amp;color=38e8ae" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                            <iframe width="420" height="315" src="http://www.youtube.com/embed/eLLc00ZBgJM" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
