Remove the universal box-sizing:border-box

--- a/app/assets/stylesheets/our-team.css
+++ b/app/assets/stylesheets/our-team.css
@@ -147,4 +147,4 @@
 	-ms-transform: scale(1);
 	transform: scale(1);	
 }
-* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+/* * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; } */
