--- a/app/views/account/myaccount.html.erb
+++ b/app/views/account/myaccount.html.erb
@@ -17,8 +17,8 @@
 			<div class="row-fluid">
 				<div class="span10 offset1">
 					<div class="hero">
-						<h2><a href="/brackets/new">Make a new Bracket</></h2>
-						<h2><a href="/brackets">Brackets</></h2>
+						<h2 class="btn"><a href="/brackets/new">Make a new Bracket</a></h2>
+						<h2 class="btn"><a href="/brackets">Brackets</a></h2>
 					</div>
 				</div>
 				<div class="span8 offset2">
