--- a/app/assets/stylesheets/our-team.css
+++ b/app/assets/stylesheets/our-team.css
@@ -66,6 +66,10 @@
 	background-image: url(../img/profile/6.jpg);
 }
 
+.ch-img-7 { 
+	background-image: url(../img/profile/7.jpg);
+}
+
 .ch-info {
 	position: absolute;
 	width: 100%;
