--- a/app/views/account/myaccount.html.erb
+++ b/app/views/account/myaccount.html.erb
@@ -14,13 +14,43 @@
 		<div class="container-fluid">
 			<div class="row-fluid">
 				<div class="span6 offset3">
-					<div class="hero">
 						<h2><a class="btn btn-large btn-block" href="/brackets/new">Make a new Bracket</a></h2>
-						<br/>
-						<h2><a class="btn btn-large btn-block" href="/brackets">My Brackets</a></h2>
-					</div>
-				</div>
-				<div class="span8 offset2">
+					<div class="widget widget-table table-half">
+           
+			          <div class="widget-header">
+			            <i class="icon-th-list"></i>
+			            <h3>My Brackets</h3>
+			          </div> <!-- /widget-header -->
+			          
+			          <div class="widget-content">
+			          
+			            <table class="table table-striped table-bordered">
+			              <thead>
+			                <tr>
+			                  <th>Name</th>
+			                  <th>Options</th>
+			                </tr>
+			              </thead>
+			              
+			              <tbody>
+			              	<% @brackets.each do |b| %>
+							<tr>
+								<td><%= link_to b.name, b %></td>
+						        <td>
+						        	<div class="center_remover">
+						        	<a href=<%= bracket_path(b) %> data-method="delete" data-confirm="Are you sure?">
+						        		<i class="icon-remove-circle"></i>
+						      		</a>
+						      		</div>
+						      	</td>
+						    </tr>
+						<% end %>
+			              </tbody>
+			            </table>
+			          
+			          </div> <!-- /widget-content -->
+			          
+			        </div>
 				</div>
 			</div>
 		</div>
