updated team pics

--- a/app/assets/stylesheets/our-team.css
+++ b/app/assets/stylesheets/our-team.css
@@ -70,6 +70,26 @@
 	background-image: url(../img/profile/7.jpg);
 }
 
+.ch-img-8 { 
+	background-image: url(../img/profile/8.jpg);
+}
+
+.ch-img-9 { 
+	background-image: url(../img/profile/9.jpg);
+}
+
+.ch-img-10 { 
+	background-image: url(../img/profile/10.jpg);
+}
+
+.ch-img-11 { 
+	background-image: url(../img/profile/11.jpg);
+}
+
+.ch-img-12 { 
+	background-image: url(../img/profile/12.jpg);
+}
+
 .ch-info {
 	position: absolute;
 	width: 100%;
