--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -71,42 +71,77 @@
 									<li>
 										<div class="ch-item ch-img-2">
 											<div class="ch-info">
-												<h3>Devin Solanki</h3>
+												<h3>Alex Browne</h3>
 											</div>
 										</div>
 									</li>
 									<li>
 										<div class="ch-item ch-img-3">
 											<div class="ch-info">
-												<h3>James Band</h3>
+												<h3>Ashley Qian</h3>
 											</div>
 										</div>
 									</li>
 									<li>
 										<div class="ch-item ch-img-4">
 											<div class="ch-info">
-												<h3>Alyssa Henline</h3>
+												<h3>Devin Solanki</h3>
 											</div>
 										</div>
 									</li>
 									<li>
 										<div class="ch-item ch-img-5">
 											<div class="ch-info">
-												<h3>Joshua Miller</h3>
+												<h3>Michael McConville</h3>
 											</div>
 										</div>
 									</li>
 									<li>
 										<div class="ch-item ch-img-6">
 											<div class="ch-info">
-												<h3>Arun Karottu</h3>
+												<h3>Jim Posen</h3>
 											</div>
 										</div>
 									</li>
 									<li>
 										<div class="ch-item ch-img-7">
 											<div class="ch-info">
-												<h3>Michael McConville</h3>
+												<h3>Christian Drappi</h3>
+											</div>
+										</div>
+									</li>
+									<li>
+										<div class="ch-item ch-img-8">
+											<div class="ch-info">
+												<h3>James Band</h3>
+											</div>
+										</div>
+									</li>
+									<li>
+										<div class="ch-item ch-img-9">
+											<div class="ch-info">
+												<h3>Joshua Miller</h3>
+											</div>
+										</div>
+									</li>
+									<li>
+										<div class="ch-item ch-img-10">
+											<div class="ch-info">
+												<h3>Alyssa Henline</h3>
+											</div>
+										</div>
+									</li>
+									<li>
+										<div class="ch-item ch-img-11">
+											<div class="ch-info">
+												<h3>Deo Fagnisse</h3>
+											</div>
+										</div>
+									</li>
+									<li>
+										<div class="ch-item ch-img-12">
+											<div class="ch-info">
+												<h3>Arun Karottu</h3>
 											</div>
 										</div>
 									</li>
