about us page updated

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -202,8 +202,13 @@ body{
 #load p{
   text-align: justify;
 }
-#story .img{
+#story .img1{
   background: url(../img/michael.jpg);
+  height: 275px;
+  width: 400px;
+}
+#story .img2{
+  background: url(../img/incube.jpg);
   height: 275px;
   width: 400px;
 }
