--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -6,9 +6,8 @@
 				<div class="span10 offset1">
 					<div class="hero">
 						<h1>Mission</h1>
-						<p>Brackets4Life applies the energy of March Madness to take steps towards finding a cure for SIDS. SIDS research needs more funding and one way to achieve this is through efforts like Brackets4Life. Current research studies can be found here: http://www.cjsids.org/resource-center/sids-research/recent-research.html</p>
-						<p>We also hope to increase awareness about what steps parents can currently take to reduce their baby’s risk of SIDS. For a summary of these steps, parents should follow this link:
-							http://www.cjsids.org/resource-center/risk-reduction-strategy.html</p>
+						<p>Brackets4Life applies the energy of March Madness to take steps towards finding a cure for SIDS. SIDS research needs more funding and one way to achieve this is through efforts like Brackets4Life. Current research studies can be found <a href="http://www.cjsids.org/resource-center/sids-research/recent-research.html">here.</a></p>
+						<p>We also hope to increase awareness about what steps parents can currently take to reduce their baby’s risk of SIDS. For a summary of these steps, parents should follow this <a href="http://www.cjsids.org/resource-center/risk-reduction-strategy.html">link</a>.</p>
 						</div>
 					</div>
 				</div>
@@ -27,7 +26,7 @@
 								<p>“As we continue to live our life without "our little sunshine", we feel a "ray of hope" as we join with the CJ Foundation in the battle against SIDS. Together, we will make a difference in the life of a child.” - Jennifer McConville</p>
 							</div>
 							<br/><br/>
-							<div class="span4 img offset1">
+							<div class="span4 img1 offset1">
 							</div>
 							<br/><br/>
 						</div>
@@ -37,7 +36,9 @@
 				<div class="container-fluid">
 					<div class="row-fluid">
 						<div class="span12 center">
-							<div class="span5 offset6">
+							<div class="span4 img2 offset1">
+							</div>
+							<div class="span5 offset1">
 								<h2 class="cursive"> Incube's Story </h2>
 								<h4>Incube is a student entrepreneurship group at Duke University.</h4>
 
