Added a warning to the show bracket page if the bracket is not active.

--- a/app/views/brackets/show.html.erb
+++ b/app/views/brackets/show.html.erb
@@ -1,6 +1,13 @@
 <h1>NOTE: This should be formatted prettily at some point. (Alex can do this)</h1>
 <h3>But for now all the data you need is heres</h3>
 
+
+<% if not @bracket.active %>
+<div class="alert alert-error">
+  <p>The bracket is not active. Click here to activate.</p>
+</div>
+<% end %>
+
 <br/>
 <br/>
 
