--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -60,94 +60,99 @@
 								<h1 class="cursive">Team</h1>
 							</div>
 							<section class="main">
-
+								<h2 class="cursive">Founder</h2>
 								<ul class="ch-grid">
 									<li>
 										<div class="ch-item ch-img-1">
+											<div class="ch-info">
+												<h3>Michael McConville</h3>
+											</div>
+										</div>
+									</li>
+								</ul>
+								<h2 class="cursive">Development Team</h2>
+								<ul class="ch-grid">
+									<li>
+										<div class="ch-item ch-img-2">
 											<div class="ch-info">
 												<h3>Fabio Berger</h3>
 											</div>
 										</div>
 									</li>
 									<li>
-										<div class="ch-item ch-img-2">
+										<div class="ch-item ch-img-3">
 											<div class="ch-info">
 												<h3>Alex Browne</h3>
 											</div>
 										</div>
 									</li>
 									<li>
-										<div class="ch-item ch-img-3">
-											<div class="ch-info">
-												<h3>Ashley Qian</h3>
-											</div>
-										</div>
-									</li>
-									<li>
 										<div class="ch-item ch-img-4">
-											<div class="ch-info">
-												<h3>Devin Solanki</h3>
-											</div>
-										</div>
-									</li>
-									<li>
-										<div class="ch-item ch-img-5">
-											<div class="ch-info">
-												<h3>Michael McConville</h3>
-											</div>
-										</div>
-									</li>
-									<li>
-										<div class="ch-item ch-img-6">
 											<div class="ch-info">
 												<h3>Jim Posen</h3>
 											</div>
 										</div>
 									</li>
 									<li>
-										<div class="ch-item ch-img-7">
+										<div class="ch-item ch-img-5">
 											<div class="ch-info">
 												<h3>Christian Drappi</h3>
 											</div>
 										</div>
 									</li>
 									<li>
-										<div class="ch-item ch-img-8">
-											<div class="ch-info">
-												<h3>James Band</h3>
-											</div>
-										</div>
-									</li>
-									<li>
-										<div class="ch-item ch-img-9">
+										<div class="ch-item ch-img-6">
 											<div class="ch-info">
 												<h3>Joshua Miller</h3>
 											</div>
 										</div>
 									</li>
 									<li>
-										<div class="ch-item ch-img-10">
-											<div class="ch-info">
-												<h3>Alyssa Henline</h3>
-											</div>
-										</div>
-									</li>
-									<li>
-										<div class="ch-item ch-img-11">
+										<div class="ch-item ch-img-7">
 											<div class="ch-info">
 												<h3>Deo Fagnisse</h3>
 											</div>
 										</div>
 									</li>
 									<li>
-										<div class="ch-item ch-img-12">
+										<div class="ch-item ch-img-8">
 											<div class="ch-info">
 												<h3>Arun Karottu</h3>
 											</div>
 										</div>
 									</li>
 								</ul>
-
+								<h2 class="cursive">Marketing Team</h2>
+								<ul class="ch-grid">
+									<li>
+										<div class="ch-item ch-img-9">
+											<div class="ch-info">
+												<h3>Devin Solanki</h3>
+											</div>
+										</div>
+									</li>
+									<li>
+										<div class="ch-item ch-img-10">
+											<div class="ch-info">
+												<h3>Ashley Qian</h3>
+											</div>
+										</div>
+									</li>
+									<li>
+										<div class="ch-item ch-img-11">
+											<div class="ch-info">
+												<h3>James Band</h3>
+											</div>
+										</div>
+									</li>
+									<li>
+										<div class="ch-item ch-img-12">
+											<div class="ch-info">
+												<h3>Alyssa Henline</h3>
+											</div>
+										</div>
+									</li>
+								</ul>
 							</section>
 						</div>
 						<div class="span8 offset2">
