--- a/app/views/brackets/show.html.erb
+++ b/app/views/brackets/show.html.erb
@@ -4,7 +4,10 @@
 
 <% if not @bracket.active %>
 <div class="alert alert-error">
-  <p>The bracket is not active. Click here to activate.</p>
+  <p>
+    The bracket is not active.
+    Click <%= link_to "here", new_bracket_payment_path(@bracket) %> to activate.
+  </p>
 </div>
 <% end %>
 
