--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -24,7 +24,7 @@
 							<option value="5000">$5,000</option>
 						</select>
 					</div>
-					<%= form_tag payments_path do %>
+					<%= form_tag bracket_payment_path(@bracket) do %>
 					  <input id="stripe_token" name="stripeToken" type="hidden" value="" />
 					  <input id="payment_amt" name="payment_amt" type="hidden" value="" />
 					  <article>
@@ -36,7 +36,7 @@
 
 					  <button id="customButton" class="btn-success btn">Purchase</button>
 
-					<% end %> 
+					<% end %>
 				</div>
 			</div>
 		</div>
