--- a/app/views/brackets/show.html.erb
+++ b/app/views/brackets/show.html.erb
@@ -1,6 +1,3 @@
-<h1>NOTE: This should be formatted prettily at some point. (Alex can do this)</h1>
-<h3>But for now all the data you need is heres</h3>
-
 
 <% if not @bracket.active %>
 <div class="alert alert-error">
@@ -10,10 +7,6 @@
   </p>
 </div>
 <% end %>
-
-<br/>
-<br/>
-
 
 <div class="bracket">
 	<div class="clearfix"></div>
@@ -29,7 +22,7 @@
 					</li>
 				<% end %>
 			</ul>
-			<% region.drop(1)[0..2].each_with_index do |round, i| %>
+			<% region[1..3].each_with_index do |round, i| %>
 				<ul class="round round<%= i+2 %>" id="<%= name %>-<%= i+2 %>" data-region="<%= name %>" data-round="<%= i+2 %>">
 					<% region[i+1].each_slice(2).with_index do |preds, j| %>
 						<li class="match" id="<%= region[i+2][j].match_id %>">
@@ -41,8 +34,24 @@
 					<% end %>
 				</ul>
 			<% end %>
+			<ul class="round round5" id="<%= name %>-5" data-region="<%= name %>" data-round="5">
+				<li class="region-winner">
+					<%= region[4].first.winner.name %>
+				</li>
+			</ul>
 			<div class="clearfix"></div>
 		</div>
 	<% end %>
+	<div class="final-four">
+		<div class="final-four-inner">
+			<div class="south-east">
+				<%= @south_east.first.winner.name %>
+			</div>
+			<div class="west-midwest">
+				<%= @west_midwest.first.winner.name %>
+			</div>
+		</div>
+		<div class="clearfix"></div>
+	</div>
 	<div class="clearfix"></div>
 </div>
