--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -14,7 +14,7 @@
             </div>
         </div>
     </section>
-    <section class="dark" id="signup">
+    <!-- <section class="dark" id="signup">
         <div class="container">
             <div class="row">
                 <div class="span12 center">
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 </div>
 
 <script type="text/javascript">
