--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -37,7 +37,7 @@
 
 <div class="modal hide fade" id="signups">
     <div class="modal-header" tabindex="-1" role="dialog" aria-hidden="true">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <button type="button" class="close" aria-hidden="true">&times;</button>
         <h3 class="cursive">Get Started</h3>
     </div>
     <div class="modal-body">
