--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width">
 
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <link href='http://fonts.googleapis.com/css?family=Questrial|Lato:300,400,700,900,300italic,400italic,700italic,900italic|Trocchi' rel='stylesheet' type='text/css'>
 
   <%= csrf_meta_tags %>
 </head>
@@ -31,50 +32,7 @@
 
   <%= yield %>
 
-  <footer>
-    <ul class="unstyled share center">
-      <li>
-        <div class="fb-like" data-href="https://www.facebook.com/brackets4life" data-send="false" data-layout="button_count" data-width="450" data-show-faces="true" data-font="arial"></div>
-      </li>
-      <li>
-        <a href="https://twitter.com/brackets4life" class="twitter-follow-button" data-show-count="false">Follow @brackets4life</a>
-      </li>
-    </ul>
-    <ul  class="unstyled credit center">
-      <li rel="tooltip" title="Any feedback is welcome. Reach out to me on twitter (@cameronmaske) or drop me an email cam[at]closedlooplabs.co.uk" data-placement="top"> 
-        Built by <a href="http://incube.us"> InCube </a> from <a href="http://entrepreneurship.duke.edu/campus-resources"> Duke University </a>
-      </li>
-    </ul>
-    <ul class="unstyled links center">
-      <li>
-        <a href="">
-          Contact Us
-        </a>
-      </li>
-      <li>
-        <a href="">
-          FAQ
-        </a>
-      </li>
-      <li>
-        <a href="">
-          Privacy Policy
-        </a>
-      </li>
-      <li>
-        <a href="">
-          Terms of Service
-        </a>
-      </li>
-    </ul>
-    <ul  class="unstyled rights center">
-      <li> 
-        Copyright &copy; 2012 Company. All rights reserved 
-      </li>
-    </ul>
-  </footer>
-
-  <link href='http://fonts.googleapis.com/css?family=Questrial|Lato:300,400,700,900,300italic,400italic,700italic,900italic|Trocchi' rel='stylesheet' type='text/css'>
+  <%= render "shared/footer" %>
 
   <%= javascript_include_tag "application" %>
   <script src="https://checkout.stripe.com/v2/checkout.js"></script>
