Only fetch games when creating bracket.

--- a/app/views/brackets/new.html.erb
+++ b/app/views/brackets/new.html.erb
@@ -12,7 +12,7 @@
                         <h1 id="bracket_instr">Begin by making your picks for round 1:</h1>
                 </div>
             </div>
-            <div class="row">
+            <div class="row bracket-picker">
                 <div class="span8 offset2">
                      <article class="container" id="level1" data-bind="foreach: levels['1']()">
                         <div class="row">
