--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -5217,17 +5217,18 @@ a.badge:hover {
   border-radius: 6px;
 }
 .hero h1 {
+  margin-top: 60px;
   margin-bottom: 10px;
-  font-size: 60px;
+  font-size: 90px;
   font-weight: 800;
   line-height: 1;
   letter-spacing: -1px;
 }
 .hero p {
-  font-size: 18px;
+  font-size: 28px;
   font-weight: 400;
-  line-height: 33px;
-  margin: 12px 0;
+  line-height: 45px;
+  margin: 65px 0;
 }
 .pull-right {
   float: right;
