--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -5,8 +5,8 @@
 			<div class="row-fluid">
 				<div class="span10 offset1">
 					<div class="hero">
-						<h1>Mission</h1>
-						<p>Brackets4Life applies the energy of March Madness to take steps towards finding a cure for SIDS. SIDS research needs more funding and one way to achieve this is through efforts like Brackets4Life. Current research studies can be found <a href="http://www.cjsids.org/resource-center/sids-research/recent-research.html">here.</a></p>
+						<h1>Our Mission</h1>
+						<p>Brackets4Life applies the energy of March Madness to take steps towards finding a cure for SIDS. SIDS research needs more funding and one way to achieve this is through efforts like Brackets4Life. Current research studies can be found <a href="http://www.cjsids.org/resource-center/sids-research/recent-research.html">here</a>.</p>
 						<p>We also hope to increase awareness about what steps parents can currently take to reduce their baby’s risk of SIDS. For a summary of these steps, parents should follow this <a href="http://www.cjsids.org/resource-center/risk-reduction-strategy.html">link</a>.</p>
 					</div>
 				</div>
@@ -14,40 +14,37 @@
 		</div>
 	</section>
 
-	<section class="dark" id="story">
+	<section class="dark center" id="story">
 		<div class="container-fluid">
 			<div class="row-fluid">
-				<div class="span12 center">
-					<div class="span5 offset1">
-						<h2 class="cursive"> Michael's Story </h2>
-						<p>On July 2, 1996, the McConville family was blessed with the arrival of their second son, Christopher James. On December 2, 1996, Christopher's five month birthday, the family’s world was shattered when they lost their precious baby to Sudden Infant Death Syndrome (SIDS).</p>
-
-						<p>Over the past 9 years the McConville family has raised over $1 million for the CJ Foundation for SIDS. These much needed funds have given us the power to find answers to our questions and contribute to a future where every child has the opportunity to live life to its fullest.</p>
-
-						<p>“As we continue to live our life without "our little sunshine", we feel a "ray of hope" as we join with the CJ Foundation in the battle against SIDS. Together, we will make a difference in the life of a child.” - Jennifer McConville</p>
+				<div class="span10 offset1">
+					<div class="hero">
+						<h1>Our Stories</h1>
 					</div>
-					<br/><br/>
-					<div class="span4 img1 offset1">
+					<div class="accordion horizontal">
+						<section id="michael">
+							<a href="#michael"><div class="img1"></div></a>
+							<h2 class="cursive"> Michael's Story </h2>
+							<p>
+								On July 2, 1996, the McConville family was blessed with the arrival of their second son, Christopher James. On December 2, 1996, Christopher's five month birthday, the family’s world was shattered when they lost their precious baby to Sudden Infant Death Syndrome (SIDS).
+								<br><br>
+								Over the past 9 years the McConville family has raised over $1 million for the CJ Foundation for SIDS. These much needed funds have given us the power to find answers to our questions and contribute to a future where every child has the opportunity to live life to its fullest.
+								<br><br>
+								“As we continue to live our life without "our little sunshine", we feel a "ray of hope" as we join with the CJ Foundation in the battle against SIDS. Together, we will make a difference in the life of a child.” - Jennifer McConville
+							</p>
+						</section>	
+						<section id="incube">
+							<a href="#incube"><div class="img2"></div></a>
+							<h2 class="cursive"> Incube's Story </h2>
+							<p>
+								Incube is a student entrepreneurship group at Duke University.
+								<br><br>
+								As a friend of InCube, Michael approached us asking for help in the creation of a March Madness Bracket website to raise money for the CJ Foundation for SIDS.  InCube was enthusiastic about Michael’s idea and we planned a Hack-a-Thon to completely finish his project in one night. 
+								<br><br>
+								The CJ Foundation is the largest non-government funder of research about SIDS and support for the families that have been affected by a SIDS death.  Since its founding in 1994, the CJ Foundation for SIDS has raised more than 50 million dollars.
+							</p>
+						</section>
 					</div>
-					<br/><br/>
-				</div>
-			</div>
-		</div>
-		<br/><br/><br/><br/>
-		<div class="container-fluid">
-			<div class="row-fluid">
-				<div class="span12 center">
-					<div class="span4 img2 offset1">
-					</div>
-					<div class="span5 offset1">
-						<h2 class="cursive"> Incube's Story </h2>
-						<h4>Incube is a student entrepreneurship group at Duke University.</h4>
-
-						<p>As a friend of InCube, Michael approached us asking for help in the creation of a March Madness Bracket website to raise money for the CJ Foundation for SIDS.  InCube was enthusiastic about Michael’s idea and we planned a Hack-a-Thon to completely finish his project in one night. </p>
-
-						<p>The CJ Foundation is the largest non-government funder of research about SIDS and support for the families that have been affected by a SIDS death.  Since its founding in 1994, the CJ Foundation for SIDS has raised more than 50 million dollars.</p>
-					</div>
-					<br/><br/>
 				</div>
 			</div>
 		</div>
@@ -57,16 +54,15 @@
 		<div class="container-fluid">
 			<div class="row-fluid">
 				<div class="span10 offset1">
-					<div class="hero ">
-						<h1 class="cursive">Team</h1>
+					<div class="hero">
+						<h1>Our Team</h1>
 					</div>
 					<section class="main">
-						<h2 class="cursive">Founder</h2>
+						<h2 class="cursive">Michael McConville</h2>
 						<ul class="ch-grid">
 							<li>
 								<div class="ch-item ch-img-1">
 									<div class="ch-info">
-										<h3>Michael McConville</h3>
 									</div>
 								</div>
 							</li>
