--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
       </a>
       <a class="brand" href="/"><%= image_tag("logo.png")%><h1>Brackets4Life</h1></a>
-      <div class="nav-collapse collapse pull-right">
+      <div class="nav pull-right">
         <ul class="nav">
           <li><a href="/">Home</a></li>
           <li><a href="/about">About Us</a></li>
