Clean up all CSS. In general, from now on you should put css in the file corresponding to the specific page affected. For css that affects the whole site, put it in custom.css.scss

--- a/app/assets/stylesheets/brackets.css.scss
+++ b/app/assets/stylesheets/brackets.css.scss
@@ -1,6 +1,5 @@
 // TODO:
-//  - make use of variables and clever math to make this more dynamic
-//  - add styles for final four and championship
+//  - make use of variables and clever math to make this more dynamic (mostly done)
 //  - make everything prettier (or at least less plain)
 
 
