--- a/app/assets/stylesheets/responsive.css
+++ b/app/assets/stylesheets/responsive.css
@@ -11,8 +11,10 @@
 
 /*
 
-For now I've disabled responsiveness since it was breaking things and doing more harm
-than good. If we really wanted to we can add it back in later.
+==========================================
+  For now I've disabled responsiveness since it was breaking things and doing more harm
+  than good. If we really wanted to we can add it back in later.
+==========================================
 
 */
 
