--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -1,5 +1,4 @@
-<div id="load">
-    <section class="center" id="about">
+    <section class="center" id="landing-video">
         <div class="container">
             <div class="row">
                 <div class="span10 offset1">
@@ -35,4 +34,3 @@
             </div>
         </div>
     </section> -->
-</div>
