--- a/app/assets/stylesheets/about_us.css.scss
+++ b/app/assets/stylesheets/about_us.css.scss
@@ -1,4 +1,101 @@
 /* About Us Page*/
+
+
+// --- moved from main.css (Arun's CSS)
+#about .container{
+  margin: 0px 0px 0px 0px;
+  width: 100%;
+}
+#about .container .offset1{
+  margin-left: 0px;
+  width: 100%;
+}
+#about .container .row{
+  margin-left: 0px;
+}
+
+
+#mission, #team{
+  background-color: rgb(245, 245, 245);
+}
+#story .img1{
+  background: url(../img/michael.jpg);
+  height: 600px;
+  width: 900px;
+}
+#story .img2{
+  background: url(../img/incube.jpg);
+  height: 600px;
+  width: 900px;
+}
+
+//---
+
+
+//---- moved from main.css (Ashley's css)
+//---- styles for the nifty accordian box
+
+.accordion {   
+ width:100%;  
+ overflow:hidden;     
+ padding:10px;  
+ color:#414141;  
+ margin-bottom: 0px; 
+}  
+
+.accordion section{   
+  float:left;  
+  overflow:hidden;    
+  cursor:pointer;      
+  margin:3px;   
+}  
+
+.accordion section p {   
+  display:none;   
+}    
+
+.accordion section:target {   
+  background-color: rgba(255,255,255,0.9);
+}  
+
+.accordion section:target p {
+  padding: 0 20px 20px 20px;
+  font-size: 18px;
+  line-height: 1.5; 
+  display:block;  
+} 
+
+.horizontal section{  
+  width:24%; 
+  height:100%;   
+  -moz-transition: width 0.2s ease-out;   
+  -webkit-transition:width 0.2s ease-out;  
+  -o-transition:width 0.2s ease-out;  
+  transition:width 0.2s ease-out;  
+}  
+
+/*Header of closed slide*/  
+.horizontal section h2 {
+  color:#FFF;    
+  font-size: 40px;
+  line-height:1.5;   
+  position:relative;    
+  margin-top:100px;  
+}   
+/*On mouse over open slide*/  
+.horizontal :target{   
+ width:74%;  
+ height:100%;   
+}  
+.horizontal :target h2{   
+ margin-top:20px;   
+ color:#333;
+ font-size: 28px;
+}  
+
+//--- 
+
+
 .ch-grid {
 	margin: 20px 0 0 0;
 	padding: 0;
